Development/3 (#8)
* fix wrong variable assignment

* prepare configuration runner

* implement ScriptMapper and ScriptWriter

* add config-runner to docker-compose

* add local influx2 export

* add xk6 to Docker

* delete unused files and expand docker-compose

* add workflow for config-runner

* little refactor

* update READMEs

* fix typo